# ci-workflows

./: Cargo.toml  README.md  rust-toolchain.toml
.github/actions/ci-env/: action.yml
.github/actions/gpu-setup/: action.yml
.github/actions/install-deps/: action.yml
.github/templates/: UNUSED_DEPS_ISSSUE.md  VERSION_CHECK.md
.github/workflows/: bench-deploy.yml  bench-pr-comment.yml  check-lurk-compiles.yml  code-quality.yml  codecov.yml  docs.yml  gpu-bench.yml  gpu-ci-cuda.yml  gpu-ci-opencl.yml  gpu-ci.yml  licenses-audits.yml  links-check.yml  lints.yml  msrv.yml  repo-sync.yml  rust-version-check.yml  typos.yml  unit-test.yml  unused-deps.yml  wasm.yml
src/: json.rs  main.rs  plot.rs
