[package]
name = "benchmark-plotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# chrono version is pinned to be compatible with plotters `build_cartesian_2d` API
chrono = { version = "=0.4.20", features = ["clock", "serde"] }
plotters = "0.3.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[dev-dependencies]
criterion = "0.4"
anyhow = "1.0"

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }
